syntax = "proto3";
package gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins;

option java_multiple_files = true;
option java_package = "gov.hhs.aspr.ms.gcm.taskit.protobuf.plugins.partitions.support.attributes.input";

import "plugins/partitions/support.proto";
import "google/protobuf/any.proto";


message AttributeIdInput {
    google.protobuf.Any id = 1;
}

message AttributeFilterInput {
    AttributeIdInput attributeId = 1;
    EqualityInput equality = 2;
    google.protobuf.Any value = 3;
}
